# RustKernels

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/rustkernel/: Cargo.toml  README.md
crates/rustkernel-accounting/: Cargo.toml  README.md
crates/rustkernel-accounting/src/: coa_mapping.rs  detection.rs  journal.rs  lib.rs  network.rs  network_generation.rs  reconciliation.rs  temporal.rs  types.rs
crates/rustkernel-audit/: Cargo.toml  README.md
crates/rustkernel-audit/src/: feature_extraction.rs  hypergraph.rs  lib.rs  types.rs
crates/rustkernel-banking/: Cargo.toml  README.md
crates/rustkernel-banking/src/: fraud.rs  lib.rs  types.rs
crates/rustkernel-behavioral/: Cargo.toml  README.md
crates/rustkernel-behavioral/src/: causal.rs  correlation.rs  forensics.rs  lib.rs  profiling.rs  signatures.rs  types.rs
crates/rustkernel-clearing/: Cargo.toml  README.md
crates/rustkernel-clearing/src/: dvp.rs  efficiency.rs  lib.rs  netting.rs  settlement.rs  types.rs  validation.rs
crates/rustkernel-cli/: Cargo.toml  README.md
crates/rustkernel-cli/src/: main.rs
crates/rustkernel-compliance/: Cargo.toml  README.md
crates/rustkernel-compliance/src/: aml.rs  kyc.rs  lib.rs  messages.rs  monitoring.rs  ring_messages.rs  sanctions.rs  types.rs
crates/rustkernel-core/: Cargo.toml  README.md
crates/rustkernel-core/src/: domain.rs  error.rs  k2k.rs  kernel.rs  lib.rs  license.rs  messages.rs  registry.rs  slo.rs  test_kernels.rs  traits.rs
crates/rustkernel-core/src/config/: mod.rs
crates/rustkernel-core/src/memory/: mod.rs  reduction.rs
crates/rustkernel-core/src/observability/: alerting.rs  logging.rs  metrics.rs  mod.rs  tracing.rs
crates/rustkernel-core/src/resilience/: circuit_breaker.rs  health.rs  mod.rs  recovery.rs  timeout.rs
crates/rustkernel-core/src/runtime/: config.rs  lifecycle.rs  mod.rs
crates/rustkernel-core/src/security/: auth.rs  mod.rs  rbac.rs  secrets.rs  tenancy.rs
crates/rustkernel-derive/: Cargo.toml  README.md
crates/rustkernel-derive/src/: lib.rs
crates/rustkernel-ecosystem/: Cargo.toml
crates/rustkernel-ecosystem/src/: actix_integration.rs  axum_integration.rs  common.rs  grpc_integration.rs  lib.rs  tower_integration.rs
crates/rustkernel-graph/: Cargo.toml  README.md
crates/rustkernel-graph/src/: centrality.rs  community.rs  cycles.rs  gnn.rs  lib.rs  messages.rs  metrics.rs  motif.rs  paths.rs  ring_messages.rs  similarity.rs  topology.rs  types.rs
crates/rustkernel-ml/: Cargo.toml  README.md
crates/rustkernel-ml/src/: anomaly.rs  clustering.rs  ensemble.rs  explainability.rs  federated.rs  healthcare.rs  lib.rs  messages.rs  nlp.rs  regression.rs  ring_messages.rs  streaming.rs  types.rs
crates/rustkernel-orderbook/: Cargo.toml  README.md
crates/rustkernel-orderbook/src/: lib.rs  matching.rs  messages.rs  ring_messages.rs  types.rs
crates/rustkernel-payments/: Cargo.toml  README.md
crates/rustkernel-payments/src/: flow.rs  lib.rs  processing.rs  types.rs
crates/rustkernel-procint/: Cargo.toml  README.md
crates/rustkernel-procint/src/: conformance.rs  dfg.rs  imputation.rs  lib.rs  ocpm.rs  partial_order.rs  prediction.rs  simulation.rs  types.rs
crates/rustkernel-python/: Cargo.toml  README.md  pyproject.toml
crates/rustkernel-python/python/rustkernels/: __init__.py
crates/rustkernel-python/src/: errors.rs  execution.rs  lib.rs  metadata.rs  registry.rs
crates/rustkernel-python/tests/: test_catalog.py  test_errors.py  test_execution.py  test_registry.py
crates/rustkernel-risk/: Cargo.toml  README.md
crates/rustkernel-risk/src/: correlation.rs  credit.rs  lib.rs  market.rs  messages.rs  ring_messages.rs  stress.rs  types.rs
crates/rustkernel-temporal/: Cargo.toml  README.md
crates/rustkernel-temporal/src/: decomposition.rs  detection.rs  forecasting.rs  lib.rs  messages.rs  ring_messages.rs  types.rs  volatility.rs
crates/rustkernel-treasury/: Cargo.toml  README.md
crates/rustkernel-treasury/src/: cashflow.rs  collateral.rs  fx.rs  interest_rate.rs  lib.rs  liquidity.rs  types.rs
crates/rustkernel/benches/: kernels.rs
crates/rustkernel/examples/: catalog.rs  licensing.rs
crates/rustkernel/src/: lib.rs
crates/rustkernel/tests/: integration.rs
crates/rustkernels/: Cargo.toml  README.md
crates/rustkernels/benches/: kernels.rs
crates/rustkernels/examples/: catalog.rs  licensing.rs
crates/rustkernels/src/: lib.rs
crates/rustkernels/tests/: integration.rs
docs/: RUSTCOMPUTE_FEATURE_REQUEST.md  book.toml  rustkernels-executive-overview.tex
docs/src/: README.md  SUMMARY.md
docs/src/appendix/: changelog.md  contributing.md
docs/src/architecture/: execution-modes.md  overview.md
docs/src/articles/: README.md  accounting-network-generation.md
docs/src/domains/: README.md  accounting.md  audit.md  banking.md  behavioral-analytics.md  clearing.md  compliance.md  graph-analytics.md  order-matching.md  payments.md  process-intelligence.md  risk-analytics.md  statistical-ml.md  temporal-analysis.md  treasury.md
docs/src/enterprise/: ecosystem.md  observability.md  resilience.md  runtime.md  security.md
docs/src/getting-started/: installation.md  quick-start.md
scripts/: publish-python.sh  publish.sh
