[workspace]
resolver = "2"
members = [
    "crates/rustkernels",
    "crates/rustkernel-core",
    "crates/rustkernel-derive",
    "crates/rustkernel-graph",
    "crates/rustkernel-ml",
    "crates/rustkernel-compliance",
    "crates/rustkernel-temporal",
    "crates/rustkernel-risk",
    "crates/rustkernel-banking",
    "crates/rustkernel-behavioral",
    "crates/rustkernel-orderbook",
    "crates/rustkernel-procint",
    "crates/rustkernel-clearing",
    "crates/rustkernel-treasury",
    "crates/rustkernel-accounting",
    "crates/rustkernel-payments",
    "crates/rustkernel-audit",
    "crates/rustkernel-cli",
    "crates/rustkernel-ecosystem",
    "crates/rustkernel-python",
]

# Exclude rustkernel-python from default builds (requires Python dev headers + maturin)
default-members = [
    "crates/rustkernels",
    "crates/rustkernel-core",
    "crates/rustkernel-derive",
    "crates/rustkernel-graph",
    "crates/rustkernel-ml",
    "crates/rustkernel-compliance",
    "crates/rustkernel-temporal",
    "crates/rustkernel-risk",
    "crates/rustkernel-banking",
    "crates/rustkernel-behavioral",
    "crates/rustkernel-orderbook",
    "crates/rustkernel-procint",
    "crates/rustkernel-clearing",
    "crates/rustkernel-treasury",
    "crates/rustkernel-accounting",
    "crates/rustkernel-payments",
    "crates/rustkernel-audit",
    "crates/rustkernel-cli",
    "crates/rustkernel-ecosystem",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Michael Ivertowski"]
license = "Apache-2.0"
repository = "https://github.com/mivertowski/RustKernels"
keywords = ["gpu", "kernels", "cuda", "compute", "finance"]
categories = ["science", "mathematics", "finance"]

[workspace.dependencies]
# Internal crates
rustkernels = { version = "0.4.0", path = "crates/rustkernels" }
rustkernel-core = { version = "0.4.0", path = "crates/rustkernel-core" }
rustkernel-derive = { version = "0.4.0", path = "crates/rustkernel-derive" }
rustkernel-graph = { version = "0.4.0", path = "crates/rustkernel-graph" }
rustkernel-ml = { version = "0.4.0", path = "crates/rustkernel-ml" }
rustkernel-compliance = { version = "0.4.0", path = "crates/rustkernel-compliance" }
rustkernel-temporal = { version = "0.4.0", path = "crates/rustkernel-temporal" }
rustkernel-risk = { version = "0.4.0", path = "crates/rustkernel-risk" }
rustkernel-banking = { version = "0.4.0", path = "crates/rustkernel-banking" }
rustkernel-behavioral = { version = "0.4.0", path = "crates/rustkernel-behavioral" }
rustkernel-orderbook = { version = "0.4.0", path = "crates/rustkernel-orderbook" }
rustkernel-procint = { version = "0.4.0", path = "crates/rustkernel-procint" }
rustkernel-clearing = { version = "0.4.0", path = "crates/rustkernel-clearing" }
rustkernel-treasury = { version = "0.4.0", path = "crates/rustkernel-treasury" }
rustkernel-accounting = { version = "0.4.0", path = "crates/rustkernel-accounting" }
rustkernel-payments = { version = "0.4.0", path = "crates/rustkernel-payments" }
rustkernel-audit = { version = "0.4.0", path = "crates/rustkernel-audit" }

# RingKernel 0.4.2 - deep integration with enterprise features
ringkernel = "0.4.2"
ringkernel-core = "0.4.2"
ringkernel-derive = "0.4.2"
ringkernel-cuda = "0.4.2"           # Primary GPU backend
ringkernel-cpu = "0.4.2"            # CPU fallback backend
ringkernel-ecosystem = "0.4.2"
ringkernel-codegen = "0.4.2"
ringkernel-cuda-codegen = "0.4.2"   # CUDA code generation

# Additional backends (enable via features)
# ringkernel-wgpu = "0.4.2"
# ringkernel-metal = "0.4.2"

# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Actor framework (Actix - closest to Orleans grains)
actix = "0.13"
actix-rt = "2.10"

# Service mode (REST/gRPC APIs)
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.2"
http-body-util = "0.1"
bytes = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rkyv = { version = "0.7", features = ["validation", "strict"] }
bytemuck = { version = "1.21", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing (enhanced for enterprise observability)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.28", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Enterprise security
rustls = "0.23"
tokio-rustls = "0.26"
ring = "0.17"
base64 = "0.22"
jsonwebtoken = "9.3"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Collections
hashbrown = "0.15"
indexmap = "2.7"
smallvec = "1.13"

# Numeric and math
num-traits = "0.2"
nalgebra = "0.33"
ndarray = "0.16"

# Random number generation
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"

# Testing
proptest = "1.6"
criterion = "0.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Proc macro support
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Runtime registration
inventory = "0.3"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1

# ============================================================================
# Workspace Feature Flags
# ============================================================================
# These features control enterprise capabilities across the entire workspace.
# Enable via: cargo build --workspace --features "enterprise"

[workspace.metadata.features]
# Enterprise features bundle
enterprise = ["crypto", "auth", "tls", "alerting", "rate-limiting", "multi-tenancy"]

# Security features
crypto = []           # Encryption at rest and in transit
auth = []             # JWT/OAuth authentication
tls = []              # TLS 1.3 for all connections
rate-limiting = []    # Request rate limiting per tenant
multi-tenancy = []    # Multi-tenant isolation

# Observability features
otlp = []             # OpenTelemetry Protocol export
structured-logging = [] # JSON structured logging
alerting = []         # Alert rule engine (Slack, PagerDuty)

# Ecosystem integrations
actix-integration = []  # Actix actor bridge
axum-integration = []   # REST/SSE endpoints
tower-integration = []  # Tower service middleware
grpc-integration = []   # Tonic gRPC server

# Backend selection
cuda-backend = []       # NVIDIA CUDA (primary)
cpu-backend = []        # CPU fallback
# wgpu-backend = []     # WebGPU (deferred)
# metal-backend = []    # Apple Metal (deferred)
