[package]
name = "rustkernel-cli"
description = "CLI tool for RustKernels management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rustkernel"
path = "src/main.rs"

[dependencies]
rustkernel-core = { workspace = true }
rustkernels = { workspace = true, features = ["full"] }

tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
