[package]
name = "rustkernel-core"
description = "Core abstractions, traits, and registry for RustKernels GPU kernel library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

# Enterprise features
enterprise = ["crypto", "auth", "tls", "alerting", "rate-limiting", "multi-tenancy"]
crypto = ["dep:ring", "dep:base64"]
auth = ["dep:jsonwebtoken", "crypto"]
tls = ["dep:rustls", "dep:tokio-rustls"]
alerting = []
rate-limiting = []
multi-tenancy = []

# Observability features
otlp = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
structured-logging = []
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]

# Ecosystem integrations
axum-integration = ["dep:axum", "dep:tower", "dep:tower-http"]
grpc-integration = ["dep:tonic", "dep:prost", "dep:prost-types"]

[dependencies]
# RustCompute integration (0.3.1 with enterprise features)
ringkernel-core = { workspace = true }
ringkernel-derive = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Actor framework
actix = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rkyv = { workspace = true }
bytemuck = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Random (for tracing span IDs)
rand = { workspace = true }

# Observability (optional)
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

# Time
chrono = { workspace = true }

# Collections
hashbrown = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }

# Identity
uuid = { workspace = true }

# Security (optional)
ring = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }

# Service framework (optional)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = { workspace = true }
