[package]
name = "rustkernel-derive"
description = "Procedural macros for RustKernels GPU kernel library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
# Proc macro essentials
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }

[dev-dependencies]
rustkernel-core = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
