[package]
name = "rustkernel-ml"
description = "Statistical ML kernels: clustering, anomaly detection, regression"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustkernel-core = { workspace = true }
rustkernel-derive = { workspace = true }
ringkernel-core = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

# ML-specific dependencies
nalgebra = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = { workspace = true }
