[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustkernels"
version = "0.4.0"
description = "Python bindings for RustKernels GPU-accelerated kernel library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Michael Ivertowski" }]
keywords = ["gpu", "kernels", "cuda", "compute", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/mivertowski/RustKernels"

[tool.maturin]
module-name = "rustkernels._rustkernels"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
